--- a/src/components/atoms/H1/H1.styles.css
+++ b/src/components/atoms/H1/H1.styles.css
@@ -2,7 +2,7 @@ h1 {
   --ratio: var(--base-ratio, 1.3);
   --leading: calc(var(--base-body-font-size, 1rem) * var(--base-line-height, 1.625));
   --font-family: var(--base-heading-font-family, 'sans-serif');
-  --font-size: calc(1rem * var(--ratio) * var(--ratio) * var(--ratio) * var(--ratio) * var(--ratio));
+  --font-size: calc(var(--base-body-font-size, 1rem) * var(--ratio) * var(--ratio) * var(--ratio) * var(--ratio) * var(--ratio));
   --line-height: calc(var(--leading) * 2.5);
   --font-weight: var(--heading-font-weight, 700);
   --margin-top: calc(var(--leading) * 3);
